# cut_optimizer

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  testing.md
config/: deploy.yml
src/: guillotine.rs  lib.rs  main.rs  render.rs  solver.rs  types.rs
