[package]
name = "cut_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[[bin]]
name = "cut_optimizer"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
